[gd_scene load_steps=7 format=3 uid="uid://kl1u2wqijagf"]

[ext_resource type="Script" uid="uid://dqmr0hcxhafeu" path="res://Scripts/menu.gd" id="1_con2f"]
[ext_resource type="FontFile" uid="uid://cksnw3iylvwaj" path="res://Assets/Fonts/Ruler 9.ttf" id="2_cayip"]
[ext_resource type="Texture2D" uid="uid://d3mvo5qufnpfs" path="res://Assets/Sprites/Topdesk/Topdesk1.png" id="4_h63v2"]
[ext_resource type="Texture2D" uid="uid://bvcqungaevde4" path="res://Assets/Sprites/Topdesk/Topdesk2.png" id="5_l6llh"]
[ext_resource type="Texture2D" uid="uid://ck0e4ushb6uw2" path="res://Assets/Sprites/Topdesk/Topdesk3.png" id="6_ocger"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cayip"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_h63v2")
}, {
"duration": 1.0,
"texture": ExtResource("5_l6llh")
}, {
"duration": 1.0,
"texture": ExtResource("6_ocger")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"start",
"speed": 5.0
}]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_con2f")

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -53.0
offset_right = 207.0
offset_bottom = 53.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cayip")
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cayip")
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cayip")
text = "Quit"

[node name="Windows" type="Panel" parent="."]
z_index = 10
layout_mode = 0
offset_left = 236.0
offset_top = 48.0
offset_right = 540.0
offset_bottom = 276.0

[node name="Margins" type="MarginContainer" parent="Windows"]
layout_mode = 0
offset_right = 370.0
offset_bottom = 329.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="OptionsWindow" type="VBoxContainer" parent="Windows/Margins"]
visible = false
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="Windows/Margins/OptionsWindow"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_cayip")
text = "Options"
fit_content = true

[node name="Tabs" type="HBoxContainer" parent="Windows/Margins/OptionsWindow"]
layout_mode = 2

[node name="General" type="Button" parent="Windows/Margins/OptionsWindow/Tabs"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_cayip")
theme_override_font_sizes/font_size = 24
text = "General"

[node name="Controls" type="Button" parent="Windows/Margins/OptionsWindow/Tabs"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_cayip")
theme_override_font_sizes/font_size = 24
text = "Controls"

[node name="Display" type="Button" parent="Windows/Margins/OptionsWindow/Tabs"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_cayip")
theme_override_font_sizes/font_size = 24
text = "Display"

[node name="General" type="VBoxContainer" parent="Windows/Margins/OptionsWindow"]
visible = false
layout_mode = 2

[node name="Language" type="OptionButton" parent="Windows/Margins/OptionsWindow/General"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cayip")
theme_override_font_sizes/font_size = 16
selected = 0
item_count = 2
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "French"
popup/item_1/id = 1

[node name="Controls" type="VBoxContainer" parent="Windows/Margins/OptionsWindow"]
visible = false
layout_mode = 2

[node name="Display" type="VBoxContainer" parent="Windows/Margins/OptionsWindow"]
layout_mode = 2

[node name="Aspect Ratio" type="OptionButton" parent="Windows/Margins/OptionsWindow/Display"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cayip")

[node name="Resolution" type="OptionButton" parent="Windows/Margins/OptionsWindow/Display"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cayip")

[node name="HBoxContainer" type="HBoxContainer" parent="Windows/Margins/OptionsWindow/Display"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="Label" type="Label" parent="Windows/Margins/OptionsWindow/Display/HBoxContainer"]
layout_direction = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cayip")
text = "Brightness"
vertical_alignment = 1

[node name="Brightness" type="HSlider" parent="Windows/Margins/OptionsWindow/Display/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="ChangelogWindow" type="VBoxContainer" parent="Windows/Margins"]
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="Windows/Margins/ChangelogWindow"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_cayip")
text = "Changelog"
fit_content = true

[node name="TableUp" type="AnimatedSprite2D" parent="."]
z_index = -1
position = Vector2(320, 180)
sprite_frames = SubResource("SpriteFrames_cayip")
frame_progress = 0.5194603

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Windows/Margins/OptionsWindow/Tabs/General" to="." method="_on_general_pressed"]
[connection signal="pressed" from="Windows/Margins/OptionsWindow/Tabs/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Windows/Margins/OptionsWindow/Tabs/Display" to="." method="_on_display_pressed"]
